Tooltip: fixed position calculation not taking arrow translation into account, causing gap between tooltip and target

--- a/tooltip/src/tooltip.scss
+++ b/tooltip/src/tooltip.scss
@@ -84,9 +84,9 @@ x-tooltip > .tooltip-arrow{
         left: 50%;
         
         @include animated(left, 0.2s);
-        @include transformed(translateY(-45%) rotate(45deg));
-        border-top-width: 0px !important;
-        border-left-width: 0px !important;
+        @include transformed(translateY(-50%) rotate(45deg));
+        border-top-color: transparent !important;
+        border-left-color: transparent !important;
     }
     
     &[arrow-direction=up]{
@@ -94,9 +94,9 @@ x-tooltip > .tooltip-arrow{
         left: 50%;
         
         @include animated(left, 0.2s);
-        @include transformed(translateY(45%) rotate(45deg));
-        border-bottom-width: 0px !important;
-        border-right-width: 0px !important;
+        @include transformed(translateY(50%) rotate(45deg));
+        border-bottom-color: transparent !important;
+        border-right-color: transparent !important;
     }
     
     &[arrow-direction=left]{
@@ -104,9 +104,9 @@ x-tooltip > .tooltip-arrow{
         top: 50%;
         
         @include animated(top, 0.2s);
-        @include transformed(translateX(45%) rotate(45deg));
-        border-top-width: 0px !important;
-        border-right-width: 0px !important;
+        @include transformed(translateX(50%) rotate(45deg));
+        border-top-color: transparent !important;
+        border-right-color: transparent !important;
     }
     
     &[arrow-direction=right]{
@@ -114,9 +114,9 @@ x-tooltip > .tooltip-arrow{
         top: 50%;
         
         @include animated(top, 0.2s);
-        @include transformed(translateX(-45%) rotate(45deg));
-        border-bottom-width: 0px !important;
-        border-left-width: 0px !important;
+        @include transformed(translateX(-50%) rotate(45deg));
+        border-bottom-color: transparent !important;
+        border-left-color: transparent !important;
     }
 }
 
